tests/baselines/reference/decoratorOnFunctionDeclaration.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts(3,1): error TS1198: Decorators are not valid on this declaration type.


==== tests/cases/conformance/decorators/invalid/decoratorOnFunctionDeclaration.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~~~~
    function F() {
    ~~~~~~~~~~~~~~
    }
    ~
!!! error TS1198: Decorators are not valid on this declaration type.